zig-pkg/zig-0.0.0-Fp4XJG_h5A3OLpPXqVTJ1DRl3lZhqHp_fClrI7MUVjU_/test/cases/compile_errors/asm_output_to_const.zig
export fn foo() void {
    const local: usize = 0;
    asm volatile (""
        : [_] "=r" (local),
    );
}

const global: usize = 0;
export fn bar() void {
    asm volatile (""
        : [_] "=r" (global),
    );
}

// error
//
// :4:21: error: asm cannot output to const '_'
// :11:21: error: asm cannot output to const '_'
